adding swagger functionalities for sign and verification
